Fixed jobpost modal spacing and remote/visa otpions 3 state

--- a/src/pages/homepage/index.less
+++ b/src/pages/homepage/index.less
@@ -21,3 +21,7 @@
 .tags {
   margin: 5% 5% 5% 0;
 }
+
+.visa_remote {
+  margin-left: 10px;
+}
